new path syntax in tests